# WizualizacjaDanych

./: CMakeLists.txt  lab2.cpp  lab3.cpp  lab4.cpp  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
